--- a/styles/pokemon.css
+++ b/styles/pokemon.css
@@ -12,7 +12,7 @@ main {
     margin-bottom: 6rem;
 }
 
-.picDiv {
+.picDivs {
     width: 100%;
 }
 
@@ -64,4 +64,19 @@ main {
     transform: rotateY(180deg);
 }
 
-p {}
+p {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    margin: 0px;
+    font-size: 18px;
+    line-height;
+    ;
+}
+
+#new_pokemon {
+    width: 140px;
+    height: 100px;
+    background-color: #ffcb05;
+    font-size: 1.5rem;
+}
