--- a/styles/starwars-styles.css
+++ b/styles/starwars-styles.css
@@ -3,6 +3,35 @@ html {
     color: white;
 }
 
+
+/*
+#navbar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: fixed;
+    background-color: var(--seahawk-green);
+    width: 100%;
+    hieght: 40vh;
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 1);
+}
+
+#navlist {
+    display: flex;
+    justify-content: space-around;
+    background-color: green;
+    width: 670px;
+    padding: .4rem;
+    font-size: 18px;
+}
+
+li {
+    list-style: none;
+    color: #fff;
+    font-size: 2rem;
+}
+*/
+
 header {
     display: flex;
     justify-content: center;
