--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@
         display: flex;
         justify-content: space-around;
         background-color: green;
-        width: 670px;
+        width: 380px;
         padding: .4rem;
         font-size: 18px;
     }
@@ -79,7 +79,7 @@
         color: white;
         width: 100%;
         height: 100vh;
-        background-color: var(--seahawk-blue);
+        background-color: rgb(90, 90, 110);
     }
     
     #welcome-section>p {
@@ -112,38 +112,38 @@
     #projects {
         display: flex;
         flex-direction: column;
+        align-content: flex-start;
+        justify-content: center;
         box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
         background-color: gray;
     }
     
     .projects-section {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+        grid-gap: 2rem;
+        width: 100%;
+        max-width: 1280px;
+        margin: 0 auto;
+        margin-bottom: 6rem;
         background-color: gray;
-        align-content: center;
-        justify-content: center;
     }
     
     .projects-grid {
-        /*display: grid;*/
         display: flex;
-       
-        flex-direction: column;
+        max-width: 1280px;
         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-        grid-gap: 4rem;
-        float:left;
-        width: 100%;
-        max-width: 120px;
-        margin: 0 auto;
-        margin-bottom: 50px;
-        align-items: center;
-        margin-bottom: 50px;
-        padding: 20px;
-        width: 165px;
-        height: 200px;
+        grid-template-rows: auto auto;
+        justify-content: space-around;
+        grid-gap: 30px;
+        row-gap: 20px;
+        grid-template-areas: "a b c" "d e f";
+        background-color: azure;
     }
     
     .project-image {
         display: flex;
-        align-content: space-between;
+        align-content: space-around;
         grid-template-columns: repeat(auto-fit, min-max(320px, 1fr));
         grid-gap: 4rem;
         max-height: 320px;
