--- a/styles/style.css
+++ b/styles/style.css
@@ -110,45 +110,42 @@
     }
     
     #projects {
-        display: flex;
+        display: grid;
         flex-direction: column;
-        align-content: flex-start;
-        justify-content: center;
+        justify-content: space-around;
+        flex-flow: wrap;
         box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
         background-color: gray;
     }
     
     .projects-section {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-        grid-gap: 2rem;
-        width: 100%;
-        max-width: 1280px;
-        margin: 0 auto;
-        margin-bottom: 6rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-flow: wrap;
         background-color: gray;
     }
     
     .projects-grid {
         display: flex;
-        max-width: 1280px;
         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-        grid-template-rows: auto auto;
-        justify-content: space-around;
-        grid-gap: 30px;
-        row-gap: 20px;
-        grid-template-areas: "a b c" "d e f";
-        background-color: azure;
+        grid-gap: 4rem;
+        width: 100%;
+        max-width: 1280px;
+        margin: 0 auto;
+        margin-bottom: 6rem;
     }
     
     .project-image {
-        display: flex;
-        align-content: space-around;
-        grid-template-columns: repeat(auto-fit, min-max(320px, 1fr));
+        display: grid;
+        flex-direction: row;
+        /*grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));*/
         grid-gap: 4rem;
-        max-height: 320px;
-        max-width: 320px;
-        margin-top: 10px;
+        height: 395px;
+        width: 280px;
+        weight: 320px;
+        margin-top: 30px;
+        padding: 0 auto;
     }
     
     .project-title {
@@ -158,7 +155,7 @@
         text-align: center;
         background: rgba(0, 0, 0, 0.596);
         position: relative;
-        width: 288px;
+        width: 250px;
         bottom: 50px;
         padding: 15px;
     }
