--- a/styles/starwars-styles.css
+++ b/styles/starwars-styles.css
@@ -63,11 +63,11 @@ main {
 }
 
 button {
-    font-size: 1rem;
-    padding: 10px;
-    border-radius: 10% / 50%;
+    font-size: 20px;
+    padding: 1rem;
+    border-radius: 28px;
     background-color: bisque;
-    margin-left: 20px;
+    margin: 1rem;
 }
 
 img,
